tests/NormalTests/paczka1/fuzzy1/82869554.err
Error in line 36: A730 S665 174,56
Error in line 31: 9EbO S6 74,6
